--- a/tracer.htm
+++ b/tracer.htm
@@ -81,3 +81,9 @@
 	</tr>
 </table>
 <button onclick="_clear();">Clear</button>
+<input type="range" 
+	min="0.1" 
+	max="5" 
+	step="0.1" 
+	value = "1"
+	oninput="SPEED= +this.value; this.nextSibling.innerText = this.value"><span>1</span>
